discussion/kv_engine/176424/176424_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52490: Move Backfill Task to its own source files

Change-Id: I74fa054f38cd327221bbb106bb059ed827a51003

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-06-21 08:34:42.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-06-21 08:34:53.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/303375/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-21 09:58:42.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/282/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(managerTask->getId());
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:141:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->schedule(managerTask);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:210:17: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
                ExecutorPool::get()->wake(managerTask->getId());
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:363:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(managerTask->getId());
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/282/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9:
error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/282/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/278/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9:
error: use of undeclared identifier "ExecutorPool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/278/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/387/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/387/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/410/ : FAILURE

Timeout of a CTest test [2022-06-21T09:10:50.629Z] 442/442 Test #440: cluster_test ................................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/410/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/279/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/279/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/301/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/301/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/290/ : FAILURE

Failure of GoogleTest "TransportProtocols/SaslTest.IncorrectSCRAM_SHA512/Mcbp":

<pre>
[ RUN      ] TransportProtocols/SaslTest.IncorrectSCRAM_SHA512/Mcbp
[2022-06-21T09:32:45.640Z] [       OK ] TransportProtocols/SaslTest.IncorrectSCRAM_SHA512/Mcbp (302 ms)
[2022-06-21T09:32:45.640Z] [ RUN      ] TransportProtocols/SaslTest.IncorrectSCRAM_SHA512/McbpSsl
[2022-06-21T09:32:45.640Z] unknown file: Failure
[2022-06-21T09:32:45.640Z] C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 20000ms for a response for DELETE_BUCKET" thrown in TearDown().
[2022-06-21T09:32:45.640Z] [  FAILED  ] TransportProtocols/SaslTest.IncorrectSCRAM_SHA512/McbpSsl, where GetParam() = McbpSsl (20175 ms)
TransportProtocols/SaslTest.IncorrectSCRAM_SHA512/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/290/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/292/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/292/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/291/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/291/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17301/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/284/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
